# mlir-tv

./: .gitignore  CMakeLists.txt  README.md  example.py
.github/workflows/: env-heaan.yml  env.Dockerfile  env.yml  run-test.yml
examples/conv2d_to_img2col/: conv2d_to_img2col.mlir  conv2d_to_img2col_opt.mlir
examples/fold_memref_subview_op/: fold_memref_subview_op-const.mlir  fold_memref_subview_op.mlir  fold_memref_subview_op_opt.mlir
examples/fold_tensor_extract_op/: fold_tensor_extract_op.mlir  fold_tensor_extract_op_opt.mlir
examples/fusion-tensor/: fusion-tensor_1.mlir  fusion-tensor_simple_out.mlir
examples/linalg_to_llvm_plan_conv/: linalg_to_llvm_plan_conv.mlir  linalg_to_llvm_plan_conv_opt.mlir
src/: abstractops.cpp  abstractops.h  analysis.cpp  analysis.h  debug.cpp  debug.h  encode.cpp  encode.h  function.cpp  function.h  interp.cpp  main.cpp  memory.cpp  memory.h  opts.h  print.cpp  print.h  results.h  simplevalue.h  smt.cpp  smt.h  smtmatchers.cpp  smtmatchers.h  state.cpp  state.h  tensor.cpp  tensor.h  utilities.cpp  utilities.h  utils.cpp  utils.h  value.cpp  value.h  vcgen.cpp  vcgen.h
tests/: CMakeLists.txt  README.md  lit.cfg.py  lit.cfg.py.in  lit.site.cfg.py.in  passes.py
tests/benchmark/: 1.sum_reverse_constant.src.mlir  3.sum_transpose.tgt.mlir  4.sum_concat.tgt.mlir  5.dot_reverse_constant.src.mlir  6.dot_reverse_variable.tgt.mlir  7.dot_concat.tgt.mlir  benchmark.sh
tests/benchmark/size/: 1.dot_reverse_variable_10.src.mlir  1.dot_reverse_variable_10.tgt.mlir  2.dot_reverse_variable_20.src.mlir  2.dot_reverse_variable_20.tgt.mlir  3.dot_reverse_variable_50.src.mlir  3.dot_reverse_variable_50.tgt.mlir  4.dot_reverse_variable_100.src.mlir  4.dot_reverse_variable_100.tgt.mlir  6.dot_reverse_variable_1000.src.mlir  6.dot_reverse_variable_1000.tgt.mlir  7.dot_reverse_variable_10000.src.mlir  7.dot_reverse_variable_10000.tgt.mlir  benchmark.sh
tests/benchmark/type/: 1.sum_reverse_constant.tgt.mlir  2.sum_reverse_variable.src.mlir  2.sum_reverse_variable.tgt.mlir  3.sum_transpose.src.mlir  4.sum_concat.src.mlir  4.sum_concat.tgt.mlir  5.dot_reverse_constant.tgt.mlir  6.dot_reverse_variable.src.mlir  7.dot_concat.src.mlir  benchmark.sh
tests/cases/: README.md
tests/cases/conv-to-img2col/: conv-to-img2col.src.mlir  conv-to-img2col.tgt.mlir
tests/cases/conv2d-to-img2col/: conv2d-to-img2col.src.mlir  nhwc_filter-bad.src.mlir  nhwc_filter-bad.tgt.mlir  nhwc_filter~.tgt.mlir
tests/cases/conv2d_to_img2col/: conv2d_to_img2col.mlir
tests/cases/fold-memref-subview-op/: const_tensor.src.mlir  fold-memref-subview-op_const.src.mlir  fold-memref-subview-op_const.tgt.mlir  fold-memref-subview-op_var.src.mlir  fold-memref-subview-op_var.tgt.mlir  var_tensor-bad.src.mlir  var_tensor-bad.tgt.mlir  var_tensor.src.mlir  var_tensor~.tgt.mlir
tests/cases/fold-tensor-extract-op/: fold-tensor-extract-op.src.mlir  simple.tgt.mlir
tests/cases/fold_memref_subview_op/: fold_memref_subview_op-const.mlir  fold_memref_subview_op.mlir
tests/cases/fold_tensor_extract_op/: fold_tensor_extract_op.mlir
tests/cases/fusion-tensor/: const-bad.src.mlir  const-bad.tgt.mlir  const~.tgt.mlir  fusion-tensor_const.src.mlir  fusion-tensor_const.tgt.mlir  fusion-tensor_const2.src.mlir  fusion-tensor_const2.tgt.mlir  fusion-tensor_i32.src.mlir  fusion-tensor_i32.tgt.mlir  fusion-tensor_nontensor.src.mlir  fusion-tensor_nontensor.tgt.mlir  fusion-tensor_simple.mlir  fusion-tensor_simple.src.mlir  fusion-tensor_simple.tgt.mlir  fusion-tensor_transpose.mlir  fusion-tensor_transpose.mlir.tgt  fusion-tensor_transpose.src.mlir  fusion-tensor_transpose.tgt.mlir  fusion-tensor_zerodim.src.mlir  i32-bad.src.mlir  i32-bad.tgt.mlir  i32.tgt.mlir  i32~.tgt.mlir  nontensor-bad.tgt.mlir  nontensor~.src.mlir  nontensor~.tgt.mlir  simple-bad.src.mlir  transpose-bad.src.mlir  transpose-bad.tgt.mlir  transpose.src.mlir  transpose~.src.mlir  transpose~.tgt.mlir
tests/cases/linalg-litmus/: generic-loopbound.src.mlir  generic-loopbound.tgt.mlir
tests/cases/linalg-to-llvm-plan-conv-loop-order/: linalg-to-llvm-plan-conv-loop-order.src.mlir  linalg-to-llvm-plan-conv-loop-order.tgt.mlir
tests/cases/llvmcpu-plan-conv-loop-order/: simple-bad.src.mlir  simple-bad.tgt.mlir  simple~.src.mlir
tests/cases/loop-invariant-code-motion/: loop-invariant-code-motion_0000.src.mlir  loop-invariant-code-motion_0000.tgt.mlir  loop-invariant-code-motion_0001.src.mlir  loop-invariant-code-motion_0001.tgt.mlir  loop-invariant-code-motion_0002.src.mlir  loop-invariant-code-motion_0002.tgt.mlir  loop-invariant-code-motion_0003.src.mlir  loop-invariant-code-motion_0003.tgt.mlir  loop-invariant-code-motion_0004.src.mlir  loop-invariant-code-motion_0004.tgt.mlir  loop-invariant-code-motion_0005.src.mlir  loop-invariant-code-motion_0005.tgt.mlir  loop-invariant-code-motion_0006.src.mlir  loop-invariant-code-motion_0006.tgt.mlir  loop-invariant-code-motion_0007.src.mlir  loop-invariant-code-motion_0007.tgt.mlir  loop-invariant-code-motion_0008.src.mlir  loop-invariant-code-motion_0008.tgt.mlir  loop-invariant-code-motion_0009.src.mlir  loop-invariant-code-motion_0009.tgt.mlir  loop-invariant-code-motion_0010.src.mlir  loop-invariant-code-motion_0010.tgt.mlir
tests/fold-memref-subview-ops/: const_tensor.mlir  var_tensor.mlir
tests/lit/: __init__.py
tests/lit/formats/: __init__.py  mlirtest.py
tests/litmus/abstraction/: dot.src.mlir  dot.tgt.mlir  dot_concat.src.mlir  dot_concat.tgt.mlir  dot_concat_multiset.src.mlir  dot_concat_multiset.tgt.mlir  dotint.src.mlir  dotint.tgt.mlir
tests/litmus/affine-ops/: add.src.mlir  add.tgt.mlir  mul.src.mlir  mul.tgt.mlir
tests/litmus/arith-ops/: addi.src.mlir  addi.tgt.mlir  addi_tensor.src.mlir  addi_tensor.tgt.mlir  cmpi_index.src.mlir  cmpi_index.tgt.mlir  extsi.src.mlir  (+31 more)
tests/opts/: README.md
tests/test-conv-to-img2col/: conv2d_to_img2col.mlir
tests/test-fold-memref-subview-ops/: const_tensor.mlir  var_tensor.mlir
unittests/: CMakeLists.txt  README.md  smt_test.cpp  state_test.cpp  tensor_test.cpp  tv_test_shared.h  value_test.cpp  vcgen_test.cpp  z3_expects.h
(+842 files in other folders)
